<resources>
    <string name="app_name">CPS Tool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings_fragment">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_hint">Наименование/ИНН контрагента</string>
    <string name="maps">Карты</string>
    <string name="dark_theme_title">Темная тема</string>
    <string name="history_title">История запросов</string>
    <string name="delete_history_title">Удалить историю</string>
    <string name="party_hint">Контрагент</string>
    <string name="default_name">Название</string>
    <string name="inn_title">ИНН:</string>
    <string name="address_title">Адрес:</string>
    <string name="default_inn">169256512</string>
    <string name="default_address">Алтайский край, г Рубцовск, пр Ленина 36</string>
    <string name="favourite_title">Избранное</string>
    <string name="show_on_the_map">Отобразить на карте</string>
    <string name="element_title">ElementTitle</string>
    <string name="nav_search_title">Поиск</string>
    <string name="nav_history_title">История</string>
    <string name="nav_settings_title">Настройки</string>
    <string name="nav_network_title">Соц. сети</string>
    <string name="nav_share_title">Поделиться</string>
    <string name="delete_all_title">Удалить все</string>
</resources>
